--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -1,19 +1,17 @@
 % ==============================================================================
 \chapter{CLIC: the Compact LInear Collider}
 \label{ch:CLIC}
-%==============================================================================    
-
-\section{Motivation (post-LHC)}
+%============================================================================== 
 Accelerator (two-beam acceleration), CLIC detector concept, picture of
 the full detector (3 pages)
 
-\section{Vertex detectors for CLIC}
+\section{Requirements for the CLIC vertex detector}
 motivation for pixel detectors in high-energy physics (flavour-tagging
 plots), requirements, design, technical challenges
 (cooling/mechanics), Beam induced backgrounds, Radiation damage in the
 vertex detector (3 pages).
 
 
-\section{Detector simulation software}
+\section{Flavour tagging at CLIC}
 say motivation of this thesis $\Rightarrow$ provide input for the
-digitiser (1 page).
+digitiser (1 page) and the detector simulation software.
