--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -188,7 +188,7 @@ For the analysis of the DUT data, the python-based software
 \texttt{pyEudetanalysis} is used. It can be found as a GitHub directory~\cite{pyeudet}.
 
 %% --------------------------------------------- %%
-\section{Tracking resolution studies}
+\section{Timepix3 telescope performance}\label{sec:telescopePerformance}
 
 The cluster size distribution and the collected charge comparing data
 and simulations is shown in \cref{fig:TelescopeCluSize_data_simu}.
@@ -231,8 +231,8 @@ for simulation.
 \end{figure}
 
 %% --------------------------------------------- %%
-\section{Timepix3 telescope performance}
-\label{sec:telescopePerformance}
+
+
 
 \subsection{Beam angle}
 
